# process-streaming

./: .gitignore  CHANGELOG  LICENSE  README.md  ]  package.sh  pipes-process.cabal  process-pipes.cabal  process-streaming.cabal
examples/: Main.hs  combined.txt  script1.bat  script2.bat  script3.bat  script3.rb  script4.rb  zcombined.txt
src/System/Process/: Lens.hs  Pipes.hs  Streaming.hs
src/System/Process/Streaming/: Extended.hs  Internal.hs  Text.hs  Tutorial.hs
tests/: alternating.sh  doctests.hs  test.hs
