name:          process-pipes
version:       0.0.1
license:       BSD3
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      System
Synopsis:      Utilities to handle system processes using pipes.
build-type:    Simple
cabal-version: >= 1.10
Extra-Source-Files:
    README.md

Library
    hs-source-dirs: src
    exposed-modules: 
        System.Process.Pipes
    other-modules: 
    build-depends:         
        base >= 4.4 && < 5,
        process >= 1.2.0.0,
        async >= 2.0.1.3,    
        pipes >= 4.0.0, 
        pipes-bytestring >= 1.0.3,
        pipes-concurrency >= 2.0.1
        
    default-language: Haskell2010

Source-repository head
    type:     git
    location: https://github.com/danidiaz/process-pipes.git

