name:          process-streaming
version:       0.0.1
license:       BSD3
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      System
Synopsis:      Concurrent streaming access to the input and outputs of system
               processes.
build-type:    Simple
cabal-version: >= 1.10
Extra-Source-Files:
    README.md

Library
    hs-source-dirs: src
    exposed-modules: 
        System.Process.Streaming
    other-modules: 
    build-depends:         
        base >= 4.4 && < 5,
        mtl >= 2.1.1,
        async >= 2.0.1.3,    
        process >= 1.2.0.0,
        pipes >= 4.1.0, 
        pipes-bytestring >= 2.0.0,
        pipes-text >= 0.0.0.5,
        --pipes-safe >= 2.0.1, 
        pipes-concurrency >= 2.0.2,
        pipes-parse >= 3.0.1
        
    default-language: Haskell2010

Source-repository head
    type:     git
    location: https://github.com/danidiaz/process-streaming.git

