name:          process-streaming
version:       0.0.1
license:       BSD3
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      System
Synopsis:      Concurrent, buffered, streaming access to the input and outputs
               of system processes.
build-type:    Simple
cabal-version: >= 1.10
Extra-Source-Files:
    README.md

Library
    hs-source-dirs: src
    exposed-modules: 
        System.Process.Streaming
    other-modules: 
    build-depends:         
        base >= 4.4 && < 5,
        transformers >= 0.3.0.0,
        mtl >= 2.1.1,
        either >= 4.1, 
        free >= 4.2,
        async >= 2.0.1.3,    
        process >= 1.2.0.0,
        text >= 0.11.3.1,
        pipes >= 4.1.0, 
        pipes-bytestring >= 2.0.0,
        pipes-text >= 0.0.0.8,
        pipes-concurrency >= 2.0.2,
        pipes-safe >= 2.0.2,
        mmorph >= 1.0.0,
        exceptions >= 0.3.3
        
    default-language: Haskell2010

Source-repository head
    type:     git
    location: https://github.com/danidiaz/process-streaming.git

